Fixed resource 404 error